apps/servicex/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: servicex
  labels:
    istio-injection: enabled
