apps/servicex/request-auth.yaml
apiVersion: security.istio.io/v1
kind: RequestAuthentication
metadata:
  name: "jwt-servicex"
  namespace: servicex
spec:
  selector:
    matchLabels:
      app: servicex
  jwtRules:
  - issuer: "testing@secure.istio.ioasdasdasdasd"
    jwksUri: "https://raw.githubusercontent.com/istio/istio/release-1.20/security/tools/jwt/samples/jwks.json"
 #   outputPayloadToHeader: "X-JWT-PAYLOAD"
