apps/servicex/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: s2s-app
  namespace: servicex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: servicex
  template:
    metadata:
      labels:
        app: servicex
    spec:
      containers:
      - name: servicex
        image: docker.io/12281404047/s2s:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: secret-volume
          mountPath: "/app/kpf/secret"
        - name: config-volume
          mountPath: "/app/kpf/enable-config"
      volumes:
      - name: secret-volume
        secret:
          secretName: servicex-secret
      - name: config-volume
        configMap:
          name: servicex-cm
