apps/servicex/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: servicex-vs
  namespace: servicex
spec:
  hosts:
  - "servicex.cb-interview.com"
  gateways:
  - servicex-gw
  http:
    route:
    - destination:
        host: servicex-service
